--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./Styles/style.css">
+    <title>Law Firm</title>
 </head>
+
 <body>
-    
+    <nav>
+        <img class="logo" src="./assets/white-logo.png" alt="logo">
+        <ul>
+            <li>Home</li>
+            <li>Pricing</li>
+            <li>Contact</li>
+            <li>Terms and Conditions</li>
+            <li><button>Get Started</button></li>
+        </ul>
+    </nav>
+
+    <main>
+
+        <section class="topSection">
+            <h1>
+                Your Justice is Our Top Priority
+            </h1>
+            <p>
+                As a state of law, maintaing justice is something that every citizen must pay attention to, and we are
+                here
+                to uphold justice for you.
+            </p>
+        </section>
+
+        <section class="bottomSection">
+            <img class="banner" src="./assets/banner.png" alt="banner">
+
+        </section>
+
+    </main>
 </body>
+
 </html>
