--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li>Home</li>
             <li>Pricing</li>
             <li>Contact</li>
-            <li>Terms and Conditions</li>
+            <li>Terms & Conditions</li>
             <li><button>Get Started</button></li>
         </ul>
     </nav>
