--- a/index.html
+++ b/index.html
@@ -24,14 +24,21 @@
     <main>
 
         <section class="topSection">
-            <h1>
-                Your Justice is Our Top Priority
-            </h1>
-            <p>
-                As a state of law, maintaing justice is something that every citizen must pay attention to, and we are
-                here
-                to uphold justice for you.
-            </p>
+            <div class="leftSection">
+                <h1>
+                    Your Justice is Our Top Priority
+                </h1>
+            </div>
+
+            <div class="rightSection">
+                <p>
+                    As a state of law, maintaing justice is something that every citizen must pay attention to, and we
+                    are
+                    here
+                    to uphold justice for you.
+                </p>
+            </div>
+
         </section>
 
         <section class="bottomSection">
